--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
+
 <body>
     <div class="header-section">
-        <img src="./images/logo.png" alt="Our logo">
+        <img src="./images/logo.png" alt="Our logo" class="logo">
+    </div>
+    <div class="eva-section">
+        <h1 class="section-title">EVA</h1>
+        <p class="section-text">EVA description.</p>
+    </div>
+    <div class="tom-section">
+        <h1 class="section-title">TOM</h1>
+        <p class="section-text">TOM description.</p>
+    </div>
+    <div class="news-section">
+        <h1 class="section-title">Novinky</h1>
+        <div class="news-container">
+            <div class="news-item even">
+                <h2 class="item-title">News item 10</h2>
+            </div>
+            <div class="news-item odd">
+                <h2 class="item-title">News item 9</h2>
+            </div>
+            <div class="news-item even">
+                <h2 class="item-title">News item 8</h2>
+            </div>
+            <div class="news-item odd">
+                <h2 class="item-title">News item 7</h2>
+            </div>
+            <div class="news-item even">
+                <h2 class="item-title">News item 6</h2>
+            </div>
+            <div class="news-item odd">
+                <h2 class="item-title">News item 5</h2>
+            </div>
+            <div class="news-item even">
+                <h2 class="item-title">News item 4</h2>
+            </div>
+            <div class="news-item odd">
+                <h2 class="item-title">News item 3</h2>
+            </div>
+            <div class="news-item even">
+                <h2 class="item-title">News item 2</h2>
+            </div>
+            <div class="news-item odd">
+                <h2 class="item-title">News item 1</h2>
+            </div>
+        </div>
+    </div>
+    <div class="team-section">
+        <h1 class="team-title">Tým</h1>
+        <div class="members-container">
+            <div class="team-member">
+                <h2 class="member-name">Petr Plíva</h2>
+                <h3 class="member-position">Velitel, hardware</h2>
+            </div>
+            <div class="team-member">
+                <h2 class="member-name">Václav Pavlíček</h2>
+                <h3 class="member-position">Software</h2>
+            </div>
+            <div class="team-member">
+                <h2 class="member-name">Daniel Dworschak</h2>
+                <h3 class="member-position">Konstrukce, grafika</h2>
+            </div>
+            <div class="team-member">
+                <h2 class="member-name">Lukáš Valta</h2>
+                <h3 class="member-position">Propagace, grafika</h2>
+            </div>
+            <div class="team-member">
+                <h2 class="member-name">Marek Dittrich</h2>
+                <h3 class="member-position">Hardware</h2>
+            </div>
+        </div>
+    </div>
+    <div class="sponsors-section">
+        <h1 class="section-title">Sponzoři</h1>
+        <div class="sponsors-container">
+            <div class="sponsor">
+                <h2 class="sponsor-name">Sponzor 1</h2>
+            </div>
+            <div class="sponsor">
+                <h2 class="sponsor-name">Sponzor 2</h2>
+            </div>
+            <div class="sponsor">
+                <h2 class="sponsor-name">Sponzor 3</h2>
+            </div>
+            <div class="sponsor">
+                <h2 class="sponsor-name">Sponzor 4</h2>
+            </div>
+        </div>
+        <p>Jestli se chcete stát sponzorem, tak nás prosím kontaktuje na email: <a href="mailto:charles4th@outlook.cz">charles4th@outlook.cz</a></p>
+    </div>
+    <div class="socials-section">
+        <h1 class="section-title">Kontakt</h1>
+        <div class="socials-container">
+            <div class="social">
+                <h2 class="sponsor-name">Kontakt 1</h2>
+            </div>
+            <div class="social">
+                <h2 class="sponsor-name">Kontakt 2</h2>
+            </div>
+            <div class="social">
+                <h2 class="sponsor-name">Kontakt 3</h2>
+            </div>
+            <div class="social">
+                <h2 class="sponsor-name">Kontakt 4</h2>
+            </div>
+        </div>
     </div>
 </body>
 </html>
