Make CanSat logo in header responsive.

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,15 @@
 
 <body>
     <div class="header-section">
-        <img src="./images/logo.png" alt="Our logo" class="logo">
+        <div class="gradient-container">
+            <img src="./images/logo.png" alt="Our logo" class="logo">
+        </div>
     </div>
     <div class="eva-section">
         <h1 class="section-title">EVA</h1>
         <p class="section-text">EVA description.</p>
     </div>
-    <div class="tom-section">
+    <!--<div class="tom-section">
         <h1 class="section-title">TOM</h1>
         <p class="section-text">TOM description.</p>
     </div>
@@ -115,6 +117,6 @@
                 <h2 class="sponsor-name">Kontakt 4</h2>
             </div>
         </div>
-    </div>
+    </div>-->
 </body>
 </html>
