Update news layout.

--- a/src/index.html
+++ b/src/index.html
@@ -15,50 +15,104 @@
             <img src="./images/logo.png" alt="Our logo" class="logo">
         </div>
     </div>
-    <div class="eva-section">
+    <!--<div class="eva-section">
         <h1 class="section-title">EVA</h1>
         <p class="section-text">EVA description.</p>
     </div>
-    <!--<div class="tom-section">
+    <div class="tom-section">
         <h1 class="section-title">TOM</h1>
         <p class="section-text">TOM description.</p>
-    </div>
+    </div>-->
     <div class="news-section">
         <h1 class="section-title">Novinky</h1>
         <div class="news-container">
-            <div class="news-item even">
-                <h2 class="item-title">News item 10</h2>
+            <div class="odd-news-container">
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 10</h2>
+                    <p class="item-text">News item 10 text news item 10 text news item 10 text news item 10 text news item 10 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 9</h2>
+                    <p class="item-text">News item 9 text news item 9 text news item 9 text news item 9 text news item 9 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 8</h2>
+                    <p class="item-text">News item 8 text news item 8 text news item 8 text news item 8 text news item 8 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 7</h2>
+                    <p class="item-text">News item 7 text news item 7 text news item 7 text news item 7 text news item 7 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 6</h2>
+                    <p class="item-text">News item 6 text news item 6 text news item 6 text news item 6 text news item 6 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 5</h2>
+                    <p class="item-text">News item 5 text news item 5 text news item 5 text news item 5 text news item 5 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 4</h2>
+                    <p class="item-text">News item 4 text news item 4 text news item 4 text news item 4 text news item 4 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 3</h2>
+                    <p class="item-text">News item 3 text news item 3 text news item 3 text news item 3 text news item 3 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 2</h2>
+                    <p class="item-text">News item 2 text news item 2 text news item 2 text news item 2 text news item 2 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 1</h2>
+                    <p class="item-text">News item 1 text news item 1 text news item 1 text news item 1 text news item 1 text</h2>
+                </div>
             </div>
-            <div class="news-item odd">
-                <h2 class="item-title">News item 9</h2>
-            </div>
-            <div class="news-item even">
-                <h2 class="item-title">News item 8</h2>
-            </div>
-            <div class="news-item odd">
-                <h2 class="item-title">News item 7</h2>
-            </div>
-            <div class="news-item even">
-                <h2 class="item-title">News item 6</h2>
-            </div>
-            <div class="news-item odd">
-                <h2 class="item-title">News item 5</h2>
-            </div>
-            <div class="news-item even">
-                <h2 class="item-title">News item 4</h2>
-            </div>
-            <div class="news-item odd">
-                <h2 class="item-title">News item 3</h2>
-            </div>
-            <div class="news-item even">
-                <h2 class="item-title">News item 2</h2>
-            </div>
-            <div class="news-item odd">
-                <h2 class="item-title">News item 1</h2>
+            <div class="even-news-container">
+                <div class="news-item">
+                    <h2 class="item-title">News item 10</h2>
+                    <p class="item-text">News item 10 text news item 10 text news item 10 text news item 10 text news item 10 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 9</h2>
+                    <p class="item-text">News item 9 text news item 9 text news item 9 text news item 9 text news item 9 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 8</h2>
+                    <p class="item-text">News item 8 text news item 8 text news item 8 text news item 8 text news item 8 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 7</h2>
+                    <p class="item-text">News item 7 text news item 7 text news item 7 text news item 7 text news item 7 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 6</h2>
+                    <p class="item-text">News item 6 text news item 6 text news item 6 text news item 6 text news item 6 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 5</h2>
+                    <p class="item-text">News item 5 text news item 5 text news item 5 text news item 5 text news item 5 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 4</h2>
+                    <p class="item-text">News item 4 text news item 4 text news item 4 text news item 4 text news item 4 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 3</h2>
+                    <p class="item-text">News item 3 text news item 3 text news item 3 text news item 3 text news item 3 text</h2>
+                </div>
+                <div class="news-item">
+                    <h2 class="item-title">News item 2</h2>
+                    <p class="item-text">News item 2 text news item 2 text news item 2 text news item 2 text news item 2 text</h2>
+                </div>
+                <div class="news-item hide">
+                    <h2 class="item-title">News item 1</h2>
+                    <p class="item-text">News item 1 text news item 1 text news item 1 text news item 1 text news item 1 text</h2>
+                </div>
             </div>
         </div>
     </div>
-    <div class="team-section">
+    <!--<div class="team-section">
         <h1 class="team-title">Tým</h1>
         <div class="members-container">
             <div class="team-member">
