Add header transition.

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
 <body>
     <div class="header-section">
         <div class="gradient-container">
-            <img src="./images/logo.png" alt="Our logo" class="logo">
+            <img src="./images/logo.png" alt="Our logo" class="logo" id="js-logo">
+            <button onclick="scrollDown()" class="arrow-down-button" id="js-arrow-down-button">
+                <img src="./images/arrow-down.svg" alt="Arrow down" class="arrow-down">
+            </button>
         </div>
     </div>
     <!--<div class="eva-section">
@@ -23,7 +26,7 @@
         <h1 class="section-title">TOM</h1>
         <p class="section-text">TOM description.</p>
     </div>-->
-    <div class="news-section">
+    <div class="news-section" id="js-news-section">
         <h1 class="section-title">Novinky</h1>
         <div class="news-container">
             <div class="odd-news-container">
