Add team section.

--- a/src/index.html
+++ b/src/index.html
@@ -18,15 +18,15 @@
             </button>
         </div>
     </div>
-    <!--<div class="eva-section">
+    <div class="eva-section" id="js-news-section">
         <h1 class="section-title">EVA</h1>
         <p class="section-text">EVA description.</p>
     </div>
     <div class="tom-section">
         <h1 class="section-title">TOM</h1>
         <p class="section-text">TOM description.</p>
-    </div>-->
-    <div class="news-section" id="js-news-section">
+    </div>
+    <div class="news-section">
         <h1 class="section-title">Novinky</h1>
         <div class="news-container">
             <div class="odd-news-container">
@@ -115,32 +115,42 @@
             </div>
         </div>
     </div>
-    <!--<div class="team-section">
+    <div class="team-section">
         <h1 class="team-title">Tým</h1>
         <div class="members-container">
             <div class="team-member">
+                <img class="member-profile" src="./images/petr-pliva.jpg" alt="Petr Plíva">
                 <h2 class="member-name">Petr Plíva</h2>
                 <h3 class="member-position">Velitel, hardware</h2>
+                <a href="mailto:petr.pliva@charles-4th.cz" class="member-email">petr.pliva@charles-4th.cz</a>
             </div>
             <div class="team-member">
+                <img class="member-profile" src="./images/vaclav-pavlicek.jpg" alt="Václav Pavlíček">
                 <h2 class="member-name">Václav Pavlíček</h2>
                 <h3 class="member-position">Software</h2>
+                <a href="mailto:vaclav.pavlicek@charles-4th.cz" class="member-email">vaclav.pavlicek@charles-4th.cz</a>
             </div>
             <div class="team-member">
+                <img class="member-profile" src="./images/daniel-dworschak.jpg" alt="Daniel Dworschak">
                 <h2 class="member-name">Daniel Dworschak</h2>
                 <h3 class="member-position">Konstrukce, grafika</h2>
+                <a href="mailto:daniel.dworschak@charles-4th.cz" class="member-email">daniel.dworschak@charles-4th.cz</a>
             </div>
             <div class="team-member">
+                <img class="member-profile" src="./images/lukas-valta.jpg" alt="Lukáš Valta">
                 <h2 class="member-name">Lukáš Valta</h2>
                 <h3 class="member-position">Propagace, grafika</h2>
+                <a href="mailto:lukas.valta@charles-4th.cz" class="member-email">lukas.valta@charles-4th.cz</a>
             </div>
             <div class="team-member">
+                <img class="member-profile" src="./images/marek-dittrich.jpg" alt="Marek Dittrich">
                 <h2 class="member-name">Marek Dittrich</h2>
                 <h3 class="member-position">Hardware</h2>
+                <a href="mailto:marek.dittrich@charles-4th.cz" class="member-email">marek.dittrich@charles-4th.cz</a>
             </div>
         </div>
     </div>
-    <div class="sponsors-section">
+    <!--<div class="sponsors-section">
         <h1 class="section-title">Sponzoři</h1>
         <div class="sponsors-container">
             <div class="sponsor">
