Add sponsors section.

--- a/src/index.html
+++ b/src/index.html
@@ -150,25 +150,28 @@
             </div>
         </div>
     </div>
-    <!--<div class="sponsors-section">
+    <div class="sponsors-section">
         <h1 class="section-title">Sponzoři</h1>
         <div class="sponsors-container">
-            <div class="sponsor">
-                <h2 class="sponsor-name">Sponzor 1</h2>
-            </div>
-            <div class="sponsor">
-                <h2 class="sponsor-name">Sponzor 2</h2>
-            </div>
-            <div class="sponsor">
-                <h2 class="sponsor-name">Sponzor 3</h2>
-            </div>
-            <div class="sponsor">
-                <h2 class="sponsor-name">Sponzor 4</h2>
-            </div>
+            <a href="http://www.spse.cz/" target="_blank" class="sponsor spse">
+                <img src="./images/spse.jpg" class="logo" alt="SPŠE a VOŠ Pardubice">
+            </a>
+            <a href="https://www.prusa3d.com/" target="_blank" class="sponsor prusa-research">
+                <img src="./images/prusaresearch-logo.png" class="logo" alt="PRUSA RESEARCH by JOSEF PRUSA">
+            </a>
+            <a href="https://arduino-shop.cz/" target="_blank" class="sponsor arduino-shop">
+                <img src="./images/arduino-shop-cz.png" class="logo" alt="ARDUINO-SHOP.CZ">
+            </a>
+            <a href="https://www.svitilny.eu/" target="_blank" class="sponsor svitilny">
+                <img src="./images/svitilny.eu.jpg" class="logo" alt="">
+            </a>
+            <a href="http://www.radio-shop.cz/" target="_blank" class="sponsor radio-shop">
+                <img src="./images/radio-shop.jpg" class="logo" alt="">
+            </a>
         </div>
-        <p>Jestli se chcete stát sponzorem, tak nás prosím kontaktuje na email: <a href="mailto:charles4th@outlook.cz">charles4th@outlook.cz</a></p>
+        <p class="text">Chcete nás podpořit? Kontaktujte nás na email: <a href="mailto:info@charles-4th.cz" class="link">info@charles-4th.cz</a>.</p>
     </div>
-    <div class="socials-section">
+    <!--<div class="socials-section">
         <h1 class="section-title">Kontakt</h1>
         <div class="socials-container">
             <div class="social">
