Add contact section.

--- a/src/index.html
+++ b/src/index.html
@@ -171,22 +171,22 @@
         </div>
         <p class="text">Chcete nás podpořit? Kontaktujte nás na email: <a href="mailto:info@charles-4th.cz" class="link">info@charles-4th.cz</a>.</p>
     </div>
-    <!--<div class="socials-section">
+    <div class="socials-section">
         <h1 class="section-title">Kontakt</h1>
         <div class="socials-container">
-            <div class="social">
-                <h2 class="sponsor-name">Kontakt 1</h2>
-            </div>
-            <div class="social">
-                <h2 class="sponsor-name">Kontakt 2</h2>
-            </div>
-            <div class="social">
-                <h2 class="sponsor-name">Kontakt 3</h2>
-            </div>
-            <div class="social">
-                <h2 class="sponsor-name">Kontakt 4</h2>
-            </div>
+            <a href="https://www.facebook.com/CharlesIVcansat/" target="_blank" class="social">
+                <img src="./images/facebook.svg" class="logo" alt="Facebook">
+            </a>
+            <a href="https://www.instagram.com/charles_4th_cansat_team/" target="_blank" class="social">
+                <img src="./images/instagram.png" class="logo" alt="Instagram">
+            </a>
+            <a href="https://twitter.com/4th_team" target="_blank" class="social">
+                <img src="./images/twitter.svg" class="logo" alt="Twitter">
+            </a>
+            <a href="mailto:info@charles4th.cz" class="social">
+                <img src="./images/mail.svg" class="logo" alt="E-mail">
+            </a>
         </div>
-    </div>-->
+    </div>
 </body>
 </html>
