Update news layout.

--- a/src/index.html
+++ b/src/index.html
@@ -34,86 +34,155 @@
         <div class="news-container">
             <div class="odd-news-container">
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 10</h2>
-                    <p class="item-text">News item 10 text news item 10 text news item 10 text news item 10 text news item 10 text</h2>
+                    <h2 class="item-title">Vlastnosti openCanSat KITu</h2>
+                    <h3 class="item-date">11.1. 2019</h3>
+                    <p class="item-text">Zjišťujeme, co všechno openCanSat KIT umí.</p>
+                    <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/602025456904146/?type=3&theater" target="_blank">detail</a>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 9</h2>
-                    <p class="item-text">News item 9 text news item 9 text news item 9 text news item 9 text news item 9 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/602025456904146/?type=3&theater" target="_blank" class="item-link">Detail</a>
+                    </div>
+                    <div class="dot"></div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 8</h2>
-                    <p class="item-text">News item 8 text news item 8 text news item 8 text news item 8 text news item 8 text</h2>
+                    <h2 class="item-title">Vlastnosti openCanSat KITu</h2>
+                    <h3 class="item-date">11.1. 2019</h3>
+                    <p class="item-text">Zjišťujeme, co všechno openCanSat KIT umí.</p>
+                    <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/602025456904146/?type=3&theater" target="_blank">detail</a>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 7</h2>
-                    <p class="item-text">News item 7 text news item 7 text news item 7 text news item 7 text news item 7 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
+                    <div class="dot"></div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 6</h2>
-                    <p class="item-text">News item 6 text news item 6 text news item 6 text news item 6 text news item 6 text</h2>
+                    <h2 class="item-title">Vlastnosti openCanSat KITu</h2>
+                    <h3 class="item-date">11.1. 2019</h3>
+                    <p class="item-text">Zjišťujeme, co všechno openCanSat KIT umí.</p>
+                    <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/602025456904146/?type=3&theater" target="_blank">detail</a>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 5</h2>
-                    <p class="item-text">News item 5 text news item 5 text news item 5 text news item 5 text news item 5 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
+                    <div class="dot"></div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 4</h2>
-                    <p class="item-text">News item 4 text news item 4 text news item 4 text news item 4 text news item 4 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
+                    <div class="dot"></div>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 3</h2>
-                    <p class="item-text">News item 3 text news item 3 text news item 3 text news item 3 text news item 3 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
+                    <div class="dot"></div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 2</h2>
-                    <p class="item-text">News item 2 text news item 2 text news item 2 text news item 2 text news item 2 text</h2>
+                    <h2 class="item-title">Video</h2>
+                    <h3 class="item-date">14.12. 2019</h3>
+                    <p class="item-text">Odevzdáváme video prezentující náš projekt.</p>
+                    <a href="https://www.youtube.com/watch?v=mAXTjLJ2c5U" target="_blank">detail</a>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 1</h2>
-                    <p class="item-text">News item 1 text news item 1 text news item 1 text news item 1 text news item 1 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
+                    <div class="dot"></div>
                 </div>
             </div>
             <div class="even-news-container">
                 <div class="news-item">
-                    <h2 class="item-title">News item 10</h2>
-                    <p class="item-text">News item 10 text news item 10 text news item 10 text news item 10 text news item 10 text</h2>
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 9</h2>
-                    <p class="item-text">News item 9 text news item 9 text news item 9 text news item 9 text news item 9 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 8</h2>
-                    <p class="item-text">News item 8 text news item 8 text news item 8 text news item 8 text news item 8 text</h2>
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 7</h2>
-                    <p class="item-text">News item 7 text news item 7 text news item 7 text news item 7 text news item 7 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 6</h2>
-                    <p class="item-text">News item 6 text news item 6 text news item 6 text news item 6 text news item 6 text</h2>
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 5</h2>
-                    <p class="item-text">News item 5 text news item 5 text news item 5 text news item 5 text news item 5 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 4</h2>
-                    <p class="item-text">News item 4 text news item 4 text news item 4 text news item 4 text news item 4 text</h2>
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 3</h2>
-                    <p class="item-text">News item 3 text news item 3 text news item 3 text news item 3 text news item 3 text</h2>
+                    <div class="content">
+                        <h2 class="item-date">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
+                    <div class="dot"></div>
                 </div>
                 <div class="news-item">
-                    <h2 class="item-title">News item 2</h2>
-                    <p class="item-text">News item 2 text news item 2 text news item 2 text news item 2 text news item 2 text</h2>
+                    <div class="dot"></div>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
                 <div class="news-item hide">
-                    <h2 class="item-title">News item 1</h2>
-                    <p class="item-text">News item 1 text news item 1 text news item 1 text news item 1 text news item 1 text</h2>
+                    <div class="content">
+                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h3 class="item-date">19.10. 2018</h3>
+                        <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
+                    </div>
                 </div>
             </div>
         </div>
