--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
         @import url('https://fonts.googleapis.com/css?family=Roboto');
     </style>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
+    <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
 </head>
 
 <body>
