Update mission progress section theme.

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
         <p class="section-text">TOM description.</p>
     </div>
     <div class="news-section">
-        <h1 class="section-title">Novinky</h1>
+        <h1 class="section-title">Průběh mise</h1>
         <div class="news-container">
             <div class="odd-news-container">
                 <div class="news-item hide">
