Add EVA section content.

--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,36 @@
             </button>
         </div>
     </div>
-    <div class="eva-section" id="js-news-section">
+    <div class="cansat-section eva-section" id="js-eva-section">
         <h1 class="section-title">EVA</h1>
-        <p class="section-text">EVA description.</p>
+        <div class="content">
+            <img class="image" src="./images/eva.png" alt="EVA">
+            <div class="text-content">
+                <p class="text">EVA je náš satelit a zároveň klíčový prvek naší mise. Během svého pádu bude měřit spoustu hodnot. <br><span class="bold">Měřené hodnoty:</span></p>
+                <ul class="measured-values">
+                    <li>
+                        <p>Teplota</p>
+                    </li>
+                    <li>
+                        <p>Atmosférický tlak</p>
+                    </li>
+                    <li>
+                        <p>Nadmořskou výšku</p>
+                    </li>
+                    <li>
+                        <p>Náklon</p>
+                    </li>
+                    <li>
+                        <p>Rychlost</p>
+                    </li>
+                    <li>
+                        <p>GPS</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="tom-section">
+    <div class="cansat-section">
         <h1 class="section-title">TOM</h1>
         <p class="section-text">TOM description.</p>
     </div>
