Add TOM section.

--- a/src/index.html
+++ b/src/index.html
@@ -29,31 +29,36 @@
             <div class="text-content">
                 <p class="text">EVA je náš satelit a zároveň klíčový prvek naší mise. Během svého pádu bude měřit spoustu hodnot. <br><span class="bold">Měřené hodnoty:</span></p>
                 <ul class="measured-values">
-                    <li>
-                        <p>Teplota</p>
+                    <li class="measured-value">
+                        <p class="text">Teplota</p>
                     </li>
-                    <li>
-                        <p>Atmosférický tlak</p>
+                    <li class="measured-value">
+                        <p class="text">Atmosférický tlak</p>
                     </li>
-                    <li>
-                        <p>Nadmořskou výšku</p>
+                    <li class="measured-value">
+                        <p class="text">Nadmořskou výšku</p>
                     </li>
-                    <li>
-                        <p>Náklon</p>
+                    <li class="measured-value">
+                        <p class="text">Náklon</p>
                     </li>
-                    <li>
-                        <p>Rychlost</p>
+                    <li class="measured-value">
+                        <p class="text">Rychlost</p>
                     </li>
-                    <li>
-                        <p>GPS</p>
+                    <li class="measured-value">
+                        <p class="text">GPS</p>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="cansat-section">
+    <div class="cansat-section tom-section">
         <h1 class="section-title">TOM</h1>
-        <p class="section-text">TOM description.</p>
+        <div class="content">
+            <img class="image" src="./images/tom.png" alt="TOM">
+            <div class="text-content">
+                <p class="text">To je naše pozemní přijímací stanice. Je k němu připojena anténa a přijímá data, která mu pošle EVA. Tyto dále zobrazuje na svém displeji a dále přes USB pošle do připojeného počítače.</p>
+            </div>
+        </div>
     </div>
     <div class="news-section">
         <h1 class="section-title">Průběh mise</h1>
