--- a/src/index.html
+++ b/src/index.html
@@ -60,19 +60,19 @@
             </div>
         </div>
     </div>
-    <div class="news-section">
+    <div class="progress-section">
         <h1 class="section-title">Průběh mise</h1>
-        <div class="news-container">
-            <div class="odd-news-container">
-                <div class="news-item hide">
+        <div class="progress-container">
+            <div class="odd-progress-container">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">ENERSOL</h2>
-                        <h3 class="item-date">21.-22.3. 2019</h3>
+                        <h3 class="item-date">21.–22.3. 2019</h3>
                         <p class="item-text">Prezentujeme náš projekt na celostátní soutěži ENERSOL.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/posts/640744063032285?__xts__[0]=68.ARDBcTKjbRycxLqEZRpPpUwT_xxGJMcTQUOiRfK2rGUD4LdxOSjfbKtRV6BfN5vQpCUsnu4QzJm9u3q4OtyQvH0kLdyNxqSakPjZ_azBffFalEUHgfbrBtBMvasOov0hrWtGT4yHIklbcB921R1uFPo8IHiO5AO56K7mCP_MJ1Qrr6mIw2ak0sfp9ZjS1TqdHwwUNAR7ucgObRMYg44rGu7KQ9FEsWrssRZzhq9Gn8Pz7K6H68p2u8n4KcI31CKSCprW7xImrX6_VgesQkbnXSUS9t8lRvqWx7zB68hIzL9r3FLYaekoA5VAGYuI6GfLhCKUGTihEhf8V-zuWfk&__tn__=-R" target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Návrh webu</h2>
                         <h3 class="item-date">10.3. 2019</h3>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="dot"></div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Senzory</h2>
                         <h3 class="item-date">20.2. 2019</h3>
@@ -89,7 +89,7 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Semifinále</h2>
                         <h3 class="item-date">29.1. 2019</h3>
@@ -99,7 +99,7 @@
                     </div>
                     <div class="dot"></div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Test antény</h2>
                         <h3 class="item-date">26.1. 2019</h3>
@@ -108,7 +108,7 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Anténa</h2>
                         <h3 class="item-date">18.1. 2019</h3>
@@ -119,7 +119,7 @@
                     </div>
                     <div class="dot"></div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">3D Tisk</h2>
                         <h3 class="item-date">15.1. 2019</h3>
@@ -128,7 +128,7 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Vlastnosti openCanSat KITu</h2>
                         <h3 class="item-date">11.1. 2019</h3>
@@ -138,23 +138,23 @@
                     </div>
                     <div class="dot"></div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <h2 class="item-title">Video</h2>
                     <h3 class="item-date">14.12. 2018</h3>
                     <p class="item-text">Odevzdali jsme naši videoprezentaci.</p>
-                    <a href="https://www.youtube.com/watch?v=mAXTjLJ2c5U" target="_blank">Detail</a>
+                    <a href="https://www.youtube.com/watch?v=mAXTjLJ2c5U" target="_blank" class="item-link">Detail</a>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="content">
-                        <h2 class="item-title">Přihlášený do soutěže</h2>
+                        <h2 class="item-title">Přihlášení do soutěže</h2>
                         <h3 class="item-date">19.10. 2018</h3>
                         <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
                     </div>
                     <div class="dot"></div>
                 </div>
             </div>
-            <div class="even-news-container">
-                <div class="news-item">
+            <div class="even-progress-container">
+                <div class="progress-item">
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">ENERSOL</h2>
@@ -163,14 +163,14 @@
                         <a href="https://www.facebook.com/CharlesIVcansat/posts/640744063032285?__xts__[0]=68.ARDBcTKjbRycxLqEZRpPpUwT_xxGJMcTQUOiRfK2rGUD4LdxOSjfbKtRV6BfN5vQpCUsnu4QzJm9u3q4OtyQvH0kLdyNxqSakPjZ_azBffFalEUHgfbrBtBMvasOov0hrWtGT4yHIklbcB921R1uFPo8IHiO5AO56K7mCP_MJ1Qrr6mIw2ak0sfp9ZjS1TqdHwwUNAR7ucgObRMYg44rGu7KQ9FEsWrssRZzhq9Gn8Pz7K6H68p2u8n4KcI31CKSCprW7xImrX6_VgesQkbnXSUS9t8lRvqWx7zB68hIzL9r3FLYaekoA5VAGYuI6GfLhCKUGTihEhf8V-zuWfk&__tn__=-R" target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Návrh webu</h2>
                         <h3 class="item-date">10.3. 2019</h3>
                         <p class="item-text">Dokončujeme návrh webu a jeho obsahu.</p>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">Senzory</h2>
@@ -180,7 +180,7 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Semifinále</h2>
                         <h3 class="item-date">29.1. 2019</h3>
@@ -189,7 +189,7 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">Test antény</h2>
@@ -199,7 +199,7 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Anténa</h2>
                         <h3 class="item-date">18.1. 2019</h3>
@@ -209,7 +209,7 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">3D Tisk</h2>
@@ -219,16 +219,16 @@
                             target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Vlastnosti openCanSat KITu</h2>
                         <h3 class="item-date">11.1. 2019</h3>
                         <p class="item-text">Zjišťujeme, co všechno openCanSat KIT umí.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/602025456904146/?type=3&theater"
-                            target="_blank">detail</a>
+                            target="_blank" class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item">
+                <div class="progress-item">
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">Video</h2>
@@ -238,7 +238,7 @@
                             class="item-link">Detail</a>
                     </div>
                 </div>
-                <div class="news-item hide">
+                <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Přihlášení do soutěže</h2>
                         <h3 class="item-date">19.10. 2018</h3>
