--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">ENERSOL</h2>
-                        <h3 class="item-date">21.–22.3. 2019</h3>
+                        <h3 class="item-date">21.–22. 3. 2019</h3>
                         <p class="item-text">Prezentujeme náš projekt na celostátní soutěži ENERSOL.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/posts/640744063032285?__xts__[0]=68.ARDBcTKjbRycxLqEZRpPpUwT_xxGJMcTQUOiRfK2rGUD4LdxOSjfbKtRV6BfN5vQpCUsnu4QzJm9u3q4OtyQvH0kLdyNxqSakPjZ_azBffFalEUHgfbrBtBMvasOov0hrWtGT4yHIklbcB921R1uFPo8IHiO5AO56K7mCP_MJ1Qrr6mIw2ak0sfp9ZjS1TqdHwwUNAR7ucgObRMYg44rGu7KQ9FEsWrssRZzhq9Gn8Pz7K6H68p2u8n4KcI31CKSCprW7xImrX6_VgesQkbnXSUS9t8lRvqWx7zB68hIzL9r3FLYaekoA5VAGYuI6GfLhCKUGTihEhf8V-zuWfk&__tn__=-R" target="_blank" class="item-link">Detail</a>
                     </div>
@@ -75,7 +75,7 @@
                 <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Návrh webu</h2>
-                        <h3 class="item-date">10.3. 2019</h3>
+                        <h3 class="item-date">10. 3. 2019</h3>
                         <p class="item-text">Dokončujeme návrh webu a jeho obsahu.</p>
                     </div>
                     <div class="dot"></div>
@@ -83,7 +83,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Senzory</h2>
-                        <h3 class="item-date">20.2. 2019</h3>
+                        <h3 class="item-date">20. 2. 2019</h3>
                         <p class="item-text">Postupně zapojujeme senzory.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/623549301418428/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -92,7 +92,7 @@
                 <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Semifinále</h2>
-                        <h3 class="item-date">29.1. 2019</h3>
+                        <h3 class="item-date">29. 1. 2019</h3>
                         <p class="item-text">Podařilo se nám vyhraná CanSat semifinále!</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/612020342571324/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -102,7 +102,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Test antény</h2>
-                        <h3 class="item-date">26.1. 2019</h3>
+                        <h3 class="item-date">26. 1. 2019</h3>
                         <p class="item-text">Úspešně testujeme naši anténu.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/610064922766866/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -111,7 +111,7 @@
                 <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Anténa</h2>
-                        <h3 class="item-date">18.1. 2019</h3>
+                        <h3 class="item-date">18. 1. 2019</h3>
                         <p class="item-text">Od našeho sponzora <a href="http://www.radio-shop.cz/"
                                 target="_blank">radio-shop</a> nám přišla anténa.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/605700649869960/?type=3&theater"
@@ -122,7 +122,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">3D Tisk</h2>
-                        <h3 class="item-date">15.1. 2019</h3>
+                        <h3 class="item-date">15. 1. 2019</h3>
                         <p class="item-text">Tiskeneme prototyp pro naší pozemní stanici TOMa.</p>
                         <a href="https://www.facebook.com/pg/CharlesIVcansat/photos/?tab=album&album_id=604278410012184&__xts__%5B0%5D=68.ARAYks1MsXfr9yeK4zCWmttTvK2BNf8OWNHeG6hX210-x2PkwFeB07QXtLQ9q_yeziNtnrrUb0z_8u43cO7UZIqwuNpNFXqA6gCejaE8sjZv6G-MrjooQMLiOSOXeR9HEzmyMtmH_z6cVNcVH3qzsbAo4igPo_A9aWRq80UpA01vGU-pkxw5ErGFzIPVD1V2ZVck48S_BR6LCBwRy3FiylUe73R7fZqR71HQb2e7hZDTD4yAhk9c7Iu6Rj_0jv8EnE42xb79W-GvYkUsm83_IMx1QgXwtW4Lrc5bgooNkeFCm55_x3kp4xXfy85jREKtHbPWu452VM63tVMFwDXVVi2uiW4YOuvZAazbCr81-VOdw3UySg6tn1ajcgJQ_wNj0py2ZKF7H05-1nqg9dRPs3DAviFmWOs6VrcHo9D0AENmS2_bzle-Y6jQLSRDXj-k5_2MN92T7gQSaQl_Jg&__tn__=-UC-R"
                             target="_blank" class="item-link">Detail</a>
@@ -131,7 +131,7 @@
                 <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Vlastnosti openCanSat KITu</h2>
-                        <h3 class="item-date">11.1. 2019</h3>
+                        <h3 class="item-date">11. 1. 2019</h3>
                         <p class="item-text">Zjišťujeme, co všechno openCanSat KIT umí.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/602025456904146/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -140,14 +140,14 @@
                 </div>
                 <div class="progress-item hide">
                     <h2 class="item-title">Video</h2>
-                    <h3 class="item-date">14.12. 2018</h3>
+                    <h3 class="item-date">14. 12. 2018</h3>
                     <p class="item-text">Odevzdali jsme naši videoprezentaci.</p>
                     <a href="https://www.youtube.com/watch?v=mAXTjLJ2c5U" target="_blank" class="item-link">Detail</a>
                 </div>
                 <div class="progress-item">
                     <div class="content">
                         <h2 class="item-title">Přihlášení do soutěže</h2>
-                        <h3 class="item-date">19.10. 2018</h3>
+                        <h3 class="item-date">19. 10. 2018</h3>
                         <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
                     </div>
                     <div class="dot"></div>
@@ -158,7 +158,7 @@
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">ENERSOL</h2>
-                        <h3 class="item-date">21.-22.3. 2019</h3>
+                        <h3 class="item-date">21.–22. 3. 2019</h3>
                         <p class="item-text">Prezentujeme náš projekt na celostátní soutěži ENERSOL.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/posts/640744063032285?__xts__[0]=68.ARDBcTKjbRycxLqEZRpPpUwT_xxGJMcTQUOiRfK2rGUD4LdxOSjfbKtRV6BfN5vQpCUsnu4QzJm9u3q4OtyQvH0kLdyNxqSakPjZ_azBffFalEUHgfbrBtBMvasOov0hrWtGT4yHIklbcB921R1uFPo8IHiO5AO56K7mCP_MJ1Qrr6mIw2ak0sfp9ZjS1TqdHwwUNAR7ucgObRMYg44rGu7KQ9FEsWrssRZzhq9Gn8Pz7K6H68p2u8n4KcI31CKSCprW7xImrX6_VgesQkbnXSUS9t8lRvqWx7zB68hIzL9r3FLYaekoA5VAGYuI6GfLhCKUGTihEhf8V-zuWfk&__tn__=-R" target="_blank" class="item-link">Detail</a>
                     </div>
@@ -166,7 +166,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Návrh webu</h2>
-                        <h3 class="item-date">10.3. 2019</h3>
+                        <h3 class="item-date">10. 3. 2019</h3>
                         <p class="item-text">Dokončujeme návrh webu a jeho obsahu.</p>
                     </div>
                 </div>
@@ -174,7 +174,7 @@
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">Senzory</h2>
-                        <h3 class="item-date">20.2. 2019</h3>
+                        <h3 class="item-date">20. 2. 2019</h3>
                         <p class="item-text">Postupně zapojujeme senzory.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/623549301418428/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -183,7 +183,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Semifinále</h2>
-                        <h3 class="item-date">29.1. 2019</h3>
+                        <h3 class="item-date">29. 1. 2019</h3>
                         <p class="item-text">Podařilo se nám vyhraná CanSat semifinále.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/612020342571324/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -193,7 +193,7 @@
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">Test antény</h2>
-                        <h3 class="item-date">26.1. 2019</h3>
+                        <h3 class="item-date">26. 1. 2019</h3>
                         <p class="item-text">Úspešně testujeme naši anténu.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/610064922766866/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -202,7 +202,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Anténa</h2>
-                        <h3 class="item-date">18.1. 2019</h3>
+                        <h3 class="item-date">18. 1. 2019</h3>
                         <p class="item-text">Od našeho sponzora <a href="http://www.radio-shop.cz/"
                                 target="_blank">radio-shop</a> nám přišla anténa.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/605700649869960/?type=3&theater"
@@ -213,7 +213,7 @@
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">3D Tisk</h2>
-                        <h3 class="item-date">15.1. 2019</h3>
+                        <h3 class="item-date">15. 1. 2019</h3>
                         <p class="item-text">Tiskeneme prototyp pro naší pozemní stanici TOMa.</p>
                         <a href="https://www.facebook.com/pg/CharlesIVcansat/photos/?tab=album&album_id=604278410012184&__xts__%5B0%5D=68.ARAYks1MsXfr9yeK4zCWmttTvK2BNf8OWNHeG6hX210-x2PkwFeB07QXtLQ9q_yeziNtnrrUb0z_8u43cO7UZIqwuNpNFXqA6gCejaE8sjZv6G-MrjooQMLiOSOXeR9HEzmyMtmH_z6cVNcVH3qzsbAo4igPo_A9aWRq80UpA01vGU-pkxw5ErGFzIPVD1V2ZVck48S_BR6LCBwRy3FiylUe73R7fZqR71HQb2e7hZDTD4yAhk9c7Iu6Rj_0jv8EnE42xb79W-GvYkUsm83_IMx1QgXwtW4Lrc5bgooNkeFCm55_x3kp4xXfy85jREKtHbPWu452VM63tVMFwDXVVi2uiW4YOuvZAazbCr81-VOdw3UySg6tn1ajcgJQ_wNj0py2ZKF7H05-1nqg9dRPs3DAviFmWOs6VrcHo9D0AENmS2_bzle-Y6jQLSRDXj-k5_2MN92T7gQSaQl_Jg&__tn__=-UC-R"
                             target="_blank" class="item-link">Detail</a>
@@ -222,7 +222,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Vlastnosti openCanSat KITu</h2>
-                        <h3 class="item-date">11.1. 2019</h3>
+                        <h3 class="item-date">11. 1. 2019</h3>
                         <p class="item-text">Zjišťujeme, co všechno openCanSat KIT umí.</p>
                         <a href="https://www.facebook.com/CharlesIVcansat/photos/a.602025560237469/602025456904146/?type=3&theater"
                             target="_blank" class="item-link">Detail</a>
@@ -232,7 +232,7 @@
                     <div class="dot"></div>
                     <div class="content">
                         <h2 class="item-title">Video</h2>
-                        <h3 class="item-date">14.12. 2018</h3>
+                        <h3 class="item-date">14. 12. 2018</h3>
                         <p class="item-text">Odevzdali jsme naši videoprezentaci.</p>
                         <a href="https://www.youtube.com/watch?v=mAXTjLJ2c5U" target="_blank"
                             class="item-link">Detail</a>
@@ -241,7 +241,7 @@
                 <div class="progress-item hide">
                     <div class="content">
                         <h2 class="item-title">Přihlášení do soutěže</h2>
-                        <h3 class="item-date">19.10. 2018</h3>
+                        <h3 class="item-date">19. 10. 2018</h3>
                         <p class="item-text">Náš tým odeslal přihlášku do soutěže CanSat.</p>
                     </div>
                 </div>
