--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,12 @@
     </style>
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png"/>
+    <meta property="og:title" content="Charles4th">
+    <meta property="og:description" content="CanSat project called Charles4th">
+    <meta property="og:image" content="./images/og-banner.png">
+    <meta property="og:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="675">
 </head>
 
 <body>
