Update team emails

--- a/src/index.html
+++ b/src/index.html
@@ -261,34 +261,34 @@
                 <img class="member-profile" src="./images/petr-pliva.jpg" alt="Petr Plíva">
                 <h2 class="member-name">Petr Plíva</h2>
                 <h3 class="member-position">Velitel, hardware</h2>
-                    <a href="mailto:petr.pliva@charles4th.cz" class="member-email">petr.pliva@charles4th.cz</a>
+                    <a href="mailto:petr@charles4th.cz" class="member-email">petr@charles4th.cz</a>
             </div>
             <div class="team-member">
                 <img class="member-profile" src="./images/vaclav-pavlicek.jpg" alt="Václav Pavlíček">
                 <h2 class="member-name">Václav Pavlíček</h2>
                 <h3 class="member-position">Software</h2>
-                    <a href="mailto:vaclav.pavlicek@charles4th.cz"
-                        class="member-email">vaclav.pavlicek@charles4th.cz</a>
+                    <a href="mailto:vaclav@charles4th.cz"
+                        class="member-email">vaclav@charles4th.cz</a>
             </div>
             <div class="team-member">
                 <img class="member-profile" src="./images/daniel-dworschak.jpg" alt="Daniel Dworschak">
                 <h2 class="member-name">Daniel Dworschak</h2>
                 <h3 class="member-position">Konstrukce, grafika</h2>
-                    <a href="mailto:daniel.dworschak@charles4th.cz"
-                        class="member-email">daniel.dworschak@charles4th.cz</a>
+                    <a href="mailto:daniel@charles4th.cz"
+                        class="member-email">daniel@charles4th.cz</a>
             </div>
             <div class="team-member">
                 <img class="member-profile" src="./images/lukas-valta.jpg" alt="Lukáš Valta">
                 <h2 class="member-name">Lukáš Valta</h2>
                 <h3 class="member-position">Propagace, grafika</h2>
-                    <a href="mailto:lukas.valta@charles4th.cz" class="member-email">lukas.valta@charles4th.cz</a>
+                    <a href="mailto:lukas@charles4th.cz" class="member-email">lukas@charles4th.cz</a>
             </div>
             <div class="team-member">
                 <img class="member-profile" src="./images/marek-dittrich.jpg" alt="Marek Dittrich">
                 <h2 class="member-name">Marek Dittrich</h2>
                 <h3 class="member-position">Hardware</h2>
-                    <a href="mailto:marek.dittrich@charles4th.cz"
-                        class="member-email">marek.dittrich@charles4th.cz</a>
+                    <a href="mailto:marek@charles4th.cz"
+                        class="member-email">marek@charles4th.cz</a>
             </div>
         </div>
     </div>
