Add transition to progress.

--- a/src/index.html
+++ b/src/index.html
@@ -156,6 +156,16 @@
                     </div>
                     <div class="dot"></div>
                 </div>
+                <div class="progress-item hide">
+                    <div class="content">
+                        <h2 class="item-title">ENERSOL</h2>
+                        <h3 class="item-date">21.–22. 3. 2019</h3>
+                        <p class="item-text">Prezentujeme náš projekt na celostátní soutěži ENERSOL.</p>
+                        <a href="https://www.facebook.com/CharlesIVcansat/posts/640744063032285?__xts__[0]=68.ARDBcTKjbRycxLqEZRpPpUwT_xxGJMcTQUOiRfK2rGUD4LdxOSjfbKtRV6BfN5vQpCUsnu4QzJm9u3q4OtyQvH0kLdyNxqSakPjZ_azBffFalEUHgfbrBtBMvasOov0hrWtGT4yHIklbcB921R1uFPo8IHiO5AO56K7mCP_MJ1Qrr6mIw2ak0sfp9ZjS1TqdHwwUNAR7ucgObRMYg44rGu7KQ9FEsWrssRZzhq9Gn8Pz7K6H68p2u8n4KcI31CKSCprW7xImrX6_VgesQkbnXSUS9t8lRvqWx7zB68hIzL9r3FLYaekoA5VAGYuI6GfLhCKUGTihEhf8V-zuWfk&__tn__=-R"
+                            target="_blank" class="item-link">Detail</a>
+                    </div>
+                    <div class="dot"></div>
+                </div>
             </div>
             <div class="even-progress-container">
                 <div class="progress-item hide">
